--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="enter_your_email_or_phone_number">Enter your email</string>
     <string name="send_code">Send Code</string>
     <string name="google_maps_api_key">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</string>
+    <string name="title_activity_bag_electronic_detail">activity_bag_electronic_detail</string>
 </resources>
