--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="forgot_password">Forgot Password</string>
     <string name="enter_your_email_or_phone_number">Enter your email</string>
     <string name="send_code">Send Code</string>
+    <string name="todo">TODO</string>
 
 
 </resources>
